--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,21 +4,22 @@ version = "0.1.0"
 authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
 
 [features]
-cli = ["clap", "tokio-core", "hyper", "url", "futures", "regex"]
+cli = ["clap", "hyper", "url", "regex"]
 default = ["cli"]
 
 [dependencies]
 slog = "2.0.6"
 slog-term = "2.0.1"
-rayon = "1.0"
 libc = "0.2"
 rand = "0.4.0"
 zipf = "1.0.0"
 hdrhistogram = "6.0.0"
 
+multiqueue = "0.3.2"
+tokio-core = "0.1"
+futures = "0.1"
+
 clap = { version = "2.25.0", optional = true }
-tokio-core = { version = "0.1", optional = true }
-futures = { version = "0.1", optional = true }
 hyper = { version = "0.11", optional = true }
 url = { version = "1.7", optional = true }
 regex = { version = "0.2", optional = true }
