--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
 
 [features]
-cli = ["clap", "hyper", "url", "regex"]
+cli = ["clap", "hyper", "url", "regex", "lazy_static"]
 default = ["cli"]
 
 [dependencies]
@@ -23,6 +23,7 @@ clap = { version = "2.25.0", optional = true }
 hyper = { version = "0.11", optional = true }
 url = { version = "1.7", optional = true }
 regex = { version = "0.2", optional = true }
+lazy_static = { version = "1.0.0", optional = true }
 
 [profile.release]
 debug = true
