--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ categories = ["web-programming", "command-line-utilities", "development-tools::p
 
 license = "MIT/Apache-2.0"
 
+build = "data-import.rs"
+
 [badges]
 travis-ci = { repository = "jonhoo/tsunami" }
 
@@ -31,6 +33,7 @@ libc = "0.2"
 rand = "0.4.0"
 zipf = "1.0.0"
 hdrhistogram = "6.0.0"
+histogram-sampler = "0.1.3"
 
 multiqueue = "0.3.2"
 tokio-core = "0.1"
@@ -41,6 +44,9 @@ hyper = { version = "0.11", optional = true }
 url = { version = "1.7", optional = true }
 regex = { version = "0.2", optional = true }
 lazy_static = { version = "1.0.0", optional = true }
+
+[build-dependencies]
+glob = "0.2"
 
 [profile.release]
 debug = true
