--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,7 @@ zipf = "4.0.0"
 hdrhistogram = "6.0.0"
 histogram-sampler = "0.2"
 
-crossbeam-channel = "0.3"
-tokio-core = "0.1"
+tokio = "0.1"
 futures = "0.1"
 
 clap = { version = "2.25.0", optional = true }
