--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ travis-ci = { repository = "jonhoo/tsunami" }
 maintenance = { status = "actively-developed" }
 
 [features]
-cli = ["clap", "hyper", "url", "regex", "lazy_static"]
+cli = ["clap", "hyper", "cookie", "headers", "url", "regex", "lazy_static"]
 default = ["cli"]
 
 [dependencies]
@@ -38,17 +38,19 @@ hdrhistogram = "6.0.0"
 histogram-sampler = "0.3"
 
 crossbeam-channel = "0.3"
-tokio-core = "0.1"
+tokio = "0.1"
 futures = "0.1"
 
 clap = { version = "2.25.0", optional = true }
-hyper = { version = "0.11", optional = true }
+hyper = { version = "0.12", optional = true }
+cookie = { version = "0.12", optional = true }
+headers = { version = "0.2", optional = true }
 url = { version = "1.7", optional = true }
 regex = { version = "1.0", optional = true }
 lazy_static = { version = "1.0.0", optional = true }
 
 [build-dependencies]
-glob = "0.2"
+glob = "0.3"
 
 [profile.release]
 debug = true
