--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,10 +32,11 @@ default = ["cli"]
 slog = "2.0.6"
 slog-term = "2.0.1"
 libc = "0.2"
-rand = "0.6.0"
-zipf = "5.0.0"
+rand = "0.7.0"
+rand_distr = "0.2"
+zipf = "6.0.0"
 hdrhistogram = "6.0.0"
-histogram-sampler = "0.3"
+histogram-sampler = "0.4"
 
 crossbeam-channel = "0.3"
 tokio = "0.1"
