--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trawler"
-version = "0.7.0-alpha.5"
+version = "0.7.0"
 edition = "2018"
 
 description = "A workload generator that emulates the traffic to lobste.rs"
@@ -25,7 +25,7 @@ travis-ci = { repository = "jonhoo/tsunami" }
 maintenance = { status = "actively-developed" }
 
 [features]
-cli = ["clap", "hyper", "cookie", "headers", "url", "regex", "lazy_static"]
+cli = ["clap", "hyper", "cookie", "http", "url", "regex", "lazy_static"]
 default = ["cli"]
 
 [dependencies]
@@ -39,14 +39,14 @@ hdrhistogram = "6.0.0"
 histogram-sampler = "0.4"
 
 crossbeam-channel = "0.4"
-tokio = "=0.2.0-alpha.6"
-futures-core-preview = "=0.3.0-alpha.19"
-futures-util-preview = "=0.3.0-alpha.19"
+tokio = { version = "0.2.0" }
+futures-core = "0.3.0"
+futures-util = "0.3.0"
 
 clap = { version = "2.25.0", optional = true }
-hyper = { version = "=0.13.0-alpha.4", features = [ "unstable-stream" ], optional = true }
+hyper = { version = "0.13", features = [ "stream" ], optional = true }
 cookie = { version = "0.12", optional = true }
-headers = { version = "0.2", optional = true }
+http = { version = "0.2", optional = true }
 url = { version = "2.0", optional = true }
 regex = { version = "1.0", optional = true }
 lazy_static = { version = "1.0.0", optional = true }
