--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ tokio = { version = "0.2.0", features = ["rt-threaded", "io-driver", "time"] }
 tower-make = "0.3"
 tower-service = "0.3"
 zipf = "6.0.0"
+time = ">= 0.2, < 0.2.8" # workaround for https://github.com/Alexhuszagh/rust-lexical/issues/38
 
 clap = { version = "2.25.0", optional = true }
 cookie = { version = "0.13", optional = true }
