--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trawler"
-version = "0.11.0-alpha.6"
+version = "0.11.0-alpha.7"
 authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -23,26 +23,26 @@ cli = ["clap", "hyper", "cookie", "http", "url", "regex", "lazy_static"]
 default = ["cli"]
 
 [dependencies]
-crossbeam-channel = "0.4"
+crossbeam-channel = "0.5"
 futures-core = "0.3.0"
 futures-util = "0.3.0"
 hdrhistogram = "7"
-histogram-sampler = "0.4"
+histogram-sampler = "0.5"
 libc = "0.2"
-rand = "0.7.0"
-rand_distr = "0.2"
+rand = "0.8.0"
+rand_distr = "0.4"
 slog = "2.0.6"
 slog-term = "2.0.1"
-tokio = { version = "0.2.0", features = ["rt-threaded", "io-driver", "time"] }
+tokio = { version = "1", features = ["rt-multi-thread", "time"] }
 tower-make = "0.3"
 tower-service = "0.3"
-zipf = "6.0.0"
+zipf = "7"
 time = "0.2"
 
 clap = { version = "2.25.0", optional = true }
-cookie = { version = "0.13", optional = true }
+cookie = { version = "0.15", optional = true }
 http = { version = "0.2", optional = true }
-hyper = { version = "0.13", features = [ "stream" ], optional = true }
+hyper = { version = "0.14", features = [ "client", "tcp", "http1", "http2", "stream" ], optional = true }
 lazy_static = { version = "1.0.0", optional = true }
 regex = { version = "1.0", optional = true }
 url = { version = "2.0", optional = true }
